# wisdom

./: .gitignore  Cargo.toml  README.md  TODOS.md  notes.md
.github/workflows/: multi-nothing.yml  rust.yml
examples/: all.json  all.wis  fib.wis  fib_func.wis  func.wis  hello.wis  if.wis  long.py  long.wis  regex.wis  while.wis
old/tokenizer/: Cargo.toml
old/tokenizer/examples/: functions.wis  regex.wis
old/tokenizer/src/: cursor.rs  token.rs
src/: ast.rs  binding.rs  cursor.rs  expr.rs  interp.rs  main.rs  number.rs  operation.rs  tokens.rs
tokenizer/src/: lib.rs  position.rs
welp/: Cargo.toml
welp/src/: main.rs  traits.rs
wisdom/: Cargo.toml
wisdom-ast/: Cargo.toml
wisdom-ast/src/: binding.rs  expr.rs  lib.rs  number.rs  operation.rs
wisdom-tokenizer/: Cargo.toml
wisdom/ast/: Cargo.toml
wisdom/ast/src/: assignments.rs  ast.rs  binding.rs  block.rs  error.rs  expr.rs  ext.rs  func.rs  keywords.rs  lib.rs  number.rs  operation.rs  stmt.rs  value.rs
wisdom/ast/tests/: integration.rs
wisdom/ast/tests/data/: complex_expr.json  complex_expr.wis  complex_expr.wis.ron  func.json  func.wis  func.wis.ron  if.json  if.wis  if.wis.ron  multi-op-expr.wis  multi-op-expr.wis.ron  simple_expr.json  simple_expr.wis  simple_expr.wis.ron  simple_multiline.json  simple_multiline.wis  simple_multiline.wis.ron  while.json  while.wis  while.wis.ron
wisdom/ast2/: Cargo.toml
wisdom/ast2/src/: expr.rs  ext.rs  func.rs  lib.rs  operation.rs  stmt.rs  value.rs
wisdom/benches/: interp_benchmarks.rs
wisdom/common/: Cargo.toml
wisdom/common/src/: lib.rs  position.rs  span.rs
wisdom/interpreter/: Cargo.toml
wisdom/interpreter/old/: slow.rs
wisdom/interpreter/src/: builtin.rs  context.rs  error.rs  lib.rs  scope.rs  slow.rs  value.rs
wisdom/parser/: Cargo.toml
wisdom/src/: lib.rs
wisdom/tests/: slow_interpreter.rs
wisdom/tokenizer/: Cargo.toml
wisdom/tokenizer/src/: cursor.rs  lib.rs  position.rs  token.rs  token_stream.rs  tokens.rs
