[package]
name = "wisdom"
version = "0.1.0"
authors = ["Giles Hutton <hutton.giles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
#members = [
#    "old/tokenizer"
#]

[dependencies]
#tokenizer = { path = "old/tokenizer" }
lazy_static = "1.4.0"