[package]
name = "wisdom"
version = "0.1.0"
authors = ["gh <gh@gh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast2 = { path = "ast2" }
tokenizer = { path = "tokenizer" }
interpreter = { path = "interpreter" }
common = { path = "common" }
parser = { path = "parser" }

