[package]
name = "wisdom"
version = "0.1.0"
authors = ["gh <gh@gh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "ast" }
tokenizer = { path = "tokenizer" }
interpreter = { path = "interpreter" }
common = { path = "common" }

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "interp_benchmarks"
harness = false

[profile.bench]
debug = true