[package]
name = "ast"
version = "0.1.0"
authors = ["Giles Hutton <hutton.giles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokenizer = { path = "../tokenizer" }
ron = "0.6.4"
serde = { version = "1.0.125", features = ["derive"] }

[[bin]]
name = "ast2ron"
path = "bin/ast2ron.rs"

[dev-dependencies]
paste = "1.0.5"
pretty_assertions = "0.7.1"